# eka

./: .envrc  .rustfmt.toml  Cargo.toml  ETHIC  LICENSE  README.md  rust-toolchain.toml  shell.nix  treefmt.toml
.cargo/: config.toml
.github/workflows/: ci.yml
crates/atom/: Cargo.toml
crates/atom/src/: core.rs  lib.rs  manifest.rs  store.rs
crates/atom/src/id/: mod.rs
crates/atom/src/id/tests/: mod.rs
crates/atom/src/manifest/: depends.rs
crates/atom/src/manifest/test/: mod.rs
crates/atom/src/publish/: error.rs  mod.rs
crates/atom/src/publish/git/: impl.rs  inner.rs  mod.rs  test.rs
crates/atom/src/store/: git.rs
crates/atom/src/store/git/: test.rs
crates/atom/src/uri/: mod.rs
crates/atom/src/uri/tests/: mod.rs
crates/atom/src/uri/tests/snapshots/: atom__uri__tests__ref_snapshot.snap  atom__uri__tests__uri_snapshot.snap
crates/config/: Cargo.toml
crates/config/src/: lib.rs
crates/manifest/: Cargo.toml
crates/manifest/src/: core.rs  lib.rs
crates/manifest/src/domain/: mod.rs
crates/manifest/src/domain/tests/: mod.rs
crates/manifest/src/tests/: mod.rs
crates/manifest/src/tests/snapshots/: manifest__tests__serialize.snap
crates/nixec/: Cargo.toml
crates/nixec/src/: main.rs
crates/resolve/: Cargo.toml
crates/resolve/src/: lib.rs
dev/: default.nix  env.toml
dev/env/: rust-toolchain.toml  shell.nix
dev/npins/: sources.json
manifest/: Cargo.toml
manifest/src/: core.rs  lib.rs
manifest/src/domain/: category.rs  mod.rs
manifest/src/domain/tests/snapshots/: manifest__domain__tests__depend.snap
nix/: default.nix  dev.toml
nix/dev/: rust-toolchain.toml  shell.nix
nix/npins/: sources.json
resolve/: Cargo.toml
resolve/src/: lib.rs  lock.rs
resolve/src/domain/: mod.rs
src/: ansi.rs  main.rs
src/cli/: args.rs  logging.rs  mod.rs  store.rs  vcs.rs
src/cli/args/: mod.rs
src/cli/args/commands/: mod.rs
src/cli/args/commands/publish/: git.rs  mod.rs
src/cli/commands/: init.rs  mod.rs
src/cli/commands/publish/: git.rs  mod.rs
src/cli/commands/publish/git/: error.rs  impl.rs  mod.rs
src/cli/uri/: mod.rs
src/cli/uri/snapshots/: eka__cli__uri__tests__uri_snapshot.snap
src/cli/uri/tests/: mod.rs
src/cli/uri/tests/snapshots/: eka__cli__uri__tests__uri_snapshot.snap
