workspace.members = ["crates/manifest", "crates/resolve"]

[package]
edition = "2021"
name    = "eka"
version = "0.1.0"

[dependencies]
nom        = "^7"
path-clean = "^1"

manifest.path = "crates/manifest"

anyhow.workspace             = true
semver.workspace             = true
serde.workspace              = true
serde_json.workspace         = true
thiserror.workspace          = true
tokio.workspace              = true
tracing.workspace            = true
tracing-error.workspace      = true
tracing-subscriber.workspace = true
url.workspace                = true

clap       = { version = "^4", features = ["derive"] }
gix-actor  = { version = "^0.32", optional = true }
gix-date   = { version = "^0.9", optional = true }
gix-object = { version = "^0.44", optional = true }
gix-ref    = { version = "^0.47", optional = true }

gix = { workspace = true, optional = true }

[dev-dependencies]
insta.workspace = true

[workspace.dependencies]
anyhow        = "^1"
gix           = "^0.66"
serde_json    = "^1"
thiserror     = "^1"
tracing       = "^0.1"
tracing-error = "^0.2"

insta              = { version = "^1", features = ["yaml"] }
semver             = { version = "^1", features = ["serde"] }
serde              = { version = "^1", features = ["derive"] }
tokio              = { version = "^1", features = ["full"] }
toml_edit          = { version = "^0.22", features = ["serde"] }
tracing-subscriber = { version = "^0.3", features = ["env-filter"] }
url                = { version = "^2", features = ["serde"] }

[features]
default = ["git"]
git     = ["gix", "gix-actor", "gix-date", "gix-object", "gix-ref"]
