workspace.members = ["crates/atom", "crates/config", "crates/resolve"]

[package]
edition = "2021"
name    = "eka"
version = "0.1.0"

[profile.release]
codegen-units = 1
lto           = true
opt-level     = 3
strip         = true

[dependencies]
anyhow.workspace             = true
clap.workspace               = true
serde.workspace              = true
serde_json.workspace         = true
thiserror.workspace          = true
tokio.workspace              = true
tracing.workspace            = true
tracing-error.workspace      = true
tracing-subscriber.workspace = true

atom = { path = "crates/atom" }
gix  = { workspace = true, optional = true }

[workspace.dependencies]
anyhow        = "^1"
lazy_static   = "^1"
serde_json    = "^1"
thiserror     = "^1"
tracing       = "^0.1"
tracing-error = "^0.2"

clap               = { version = "^4", features = ["derive"] }
insta              = { version = "^1", features = ["yaml"] }
semver             = { version = "^1", features = ["serde"] }
serde              = { version = "^1", features = ["derive"] }
tokio              = { version = "^1", features = ["full"] }
toml_edit          = { version = "^0.22", features = ["serde"] }
tracing-subscriber = { version = "^0.3", features = ["env-filter"] }
url                = { version = "^2", features = ["serde"] }

gix = { version = "^0.66", default-features = false, features = [
  "max-performance-safe",
  "tracing",
  "blob-diff",
  "revision",
] }

[features]
default = ["git"]
git     = ["gix"]

[patch.crates-io]
gix = { git = "https://github.com/nrdxp/gitoxide", tag = "gix-v0.66.0-eka" }
