[package]
edition = "2021"
name    = "manifest"
version = "0.1.0"

[dependencies]
unic-ucd-category = "^0.9"

semver.workspace        = true
serde.workspace         = true
thiserror.workspace     = true
tracing.workspace       = true
tracing-error.workspace = true
url.workspace           = true
toml_edit.workspace     = true
strum = { version = "^0.26", features = ["derive", "strum_macros"] }

[dev-dependencies]
anyhow.workspace    = true
toml_edit.workspace = true
