[package]
edition = "2021"
name    = "manifest"
version = "0.1.0"

[dependencies]
unic-ucd-category = "^0.9"

anyhow.workspace        = true
semver.workspace        = true
serde.workspace         = true
thiserror.workspace     = true
toml_edit.workspace     = true
tracing.workspace       = true
tracing-error.workspace = true
url.workspace           = true

[dev-dependencies]
insta.workspace = true
