[package]
name = "resolve"
version = "0.1.0"
edition = "2021"

[dependencies]
resolvo = { version = "^0.7", features = ["tokio"] }
semver = "^1"
hex = "^0.4"
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tokio.workspace = true
serde.workspace = true
url.workspace = true
toml.workspace = true
