[package]
edition = "2021"
name    = "atom"
version = "0.3.0"

[dependencies]
addr              = "^0.15"
base32            = "^0.5"
blake3            = "^1.5"
bstr              = "^1"
nom               = "^7"
path-clean        = "^1"
smallvec          = "^1"
unic-ucd-category = "^0.9"

lazy_static.workspace = true
prodash.workspace     = true
semver.workspace      = true
serde.workspace       = true
thiserror.workspace   = true
tokio.workspace       = true
toml_edit.workspace   = true
tracing.workspace     = true
url.workspace         = true

config = { path = "../config" }
gix = { workspace = true, default-features = false, features = [
  "serde",
], optional = true }
gix-url = { version = "^0.27", features = ["serde"] }

[features]
default = []
git     = ["dep:gix", "config/git"]

[dev-dependencies]
anyhow.workspace   = true
insta.workspace    = true
tempfile.workspace = true
