[package]
edition = "2021"
name    = "config"
version = "0.1.0"

[dependencies]
etcetera = "^0.8"

serde.workspace = true

figment = { version = "^0.10", features = ["env", "toml"] }
gix     = { workspace = true, default-features = false, optional = true }

[features]
default = []
git     = ["dep:gix"]
