[package]
edition = "2021"
name    = "manifest"
version = "0.1.0"

[dependencies]
atom = { path = "../atom", features = ["serde"] }

anyhow.workspace    = true
semver.workspace    = true
serde.workspace     = true
thiserror.workspace = true
toml_edit.workspace = true
url.workspace       = true

[dev-dependencies]
insta.workspace = true
